--- a/ui.frontend/src/app/components/inicial-component/inicial-component.component.css
+++ b/ui.frontend/src/app/components/inicial-component/inicial-component.component.css
@@ -1,7 +1,66 @@
-p {
-    font-size: 2.0em;
+@import url('https://fonts.googleapis.com/css2?family=Coda:wght@400;800&display=swap');
+header {
+    width: 90%;
+    margin: 0 auto;
+    min-height: 15vh;
+    max-height: 220px;
+    background-color: dimgray;
+    position: relative;
+    padding: 10px 5%;
+    box-shadow: 5px 5px 5px #ccc;
+   
 }
 
-h1{
-    font-size: 2.8em;
+header h1 {
+    font-family: 'Coda', cursive;
+    color: #fff;
+}
+header p {
+    font-family: 'Coda', cursive;
+    color: #fff;
+}
+section{
+    width: 90%;
+    height: 60vh;
+    max-height: 1200px;
+    padding: 5vh 5%;
+}
+section p {
+    font-family: 'Coda', cursive;
+    font-size: 1.2em;
+    display: inline-block;
+}
+.formBox {
+    display: inline-block;
+    margin-left: 6% ;
+    width: 60%;
+}
+.formBox input[type='text']{
+    width: 40%;
+    height: 30px;
+    padding-left: 20px;
+    margin-right: 20px;
+    border-radius: 20px;
+}
+
+.consultar {
+    padding: 0 28px;
+    height: 35px;
+    font-size: 1.1em;
+    border-radius: 20px;
+    border: 0px solid red;
+    box-shadow: 3px 3px  5px #ccc;
+    color: #fff;
+    cursor: pointer;
+    background: linear-gradient(90deg, #FF2D04 0%, #C13216 100%);
+}
+
+.result p {
+    display: block;
+}
+
+.img-perfil {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
 }
